<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".GuestAccount">

    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/my_account"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/guest_signup"
        android:gravity="center"
        android:padding="40dp"/>

    <EditText
        android:id="@+id/editTextNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextEmailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4CAF50"
        android:padding="12dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="12dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="#000000" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="left"
        android:src="@android:drawable/ic_menu_revert" />

</LinearLayout>


