<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/my_account"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/accountImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_name" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <Button
            android:id="@+id/updateInfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/update"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextNewPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#F44336"
            android:text="@string/update_password"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButton"
            android:text="@string/logout"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
</ScrollView>