<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#F5F5F5">


    <EditText
        android:id="@+id/editTextNameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/editTextEmailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/editTextPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4CAF50"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:padding="12dp" />

</LinearLayout>
