<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/find_my_escape"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4CAF50"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"/>

    <Button
        android:id="@+id/signupPageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:backgroundTint="#2196F3"
        app:layout_constraintTop_toBottomOf="@id/loginButton"/>

    <Button
        android:id="@+id/guestLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_as_guest"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:backgroundTint="#2196F3"
        app:layout_constraintTop_toBottomOf="@id/signupPageButton"/>

</LinearLayout>
